# pidgine

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  justfile  pidgine.cabal  redatared.cabal
bench/: Bench.hs
docs/: first-principles.md
lib/Engine/Data/: ECS.hs  FRP.hs  Filterable.hs  Input.hs  Program.hs  System.hs  Transform.hs
lib/Engine/Data/Program/: Core.hs
scripts/: bench-guard.sh
tests/: ECSProps.hs  FRPProps.hs  Main.hs  ProgramProps.hs  SystemProps.hs
