cabal-version:      3.14
name:               pidgine
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Engine.Data.FRP
                      Engine.Data.ECS
                      Engine.Data.Program
                      Engine.Data.Input
                      Engine.Data.Transform
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                      , array
                      , containers
                      , parallel
                      , vector ^>=0.13
                      , rrb-vector
    hs-source-dirs:   lib
    default-language: GHC2024

test-suite pidgine-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    other-modules:    FRPProps
                      ECSProps
                      ProgramProps
    build-depends:    base ^>=4.21.0.0
                      , array
                      , containers
                      , parallel
                      , vector ^>=0.13
                      , rrb-vector
                      , QuickCheck
                      , pidgine
    default-language: GHC2024

benchmark pidgine-bench
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Bench.hs
    ghc-options:      -threaded -rtsopts
    build-depends:    base ^>=4.21.0.0
                      , array
                      , containers
                      , parallel
                      , vector ^>=0.13
                      , rrb-vector
                      , criterion
                      , pidgine
    default-language: GHC2024
